commiting for test

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -13,10 +13,6 @@
   <li><b>{{pet.available}}</b></li>
 </ol>
 {% endfor %}
-<form>
-  <button type="submit" formaction="/add" formmethod="GET">Add!!!</button>
-</form>
-<h1>UPDATE PLEASE</h1>
-<!-- <a href="/add"><button>Add</button></a> -->
+<a><button href="/add">Add</button></a>
 
 {% endblock %}
