Add pet form works

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -13,6 +13,7 @@
   <li><b>{{pet.available}}</b></li>
 </ol>
 {% endfor %}
-<a><button href="/add">Add</button></a>
+
+<a href="/add"><button>Add</button></a>
 
 {% endblock %}
